samples/_failures_safe/1761798951_567c10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3f38f7b.c: In function ‘main’:
./samples/SAFE/__tmp_d3f38f7b.c:143:12: error: missing terminating " character
  143 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_d3f38f7b.c:143:5: error: expected expression at end of input
  143 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_d3f38f7b.c:143:5: error: expected declaration or statement at end of input
